--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -54,7 +54,7 @@
     " - ②는 발생하는 패턴에서 약간의 변형이 발생하면 결정 직선을 넘어 오분류될 가능성이 큼\n",
     " - 하지만, 직선 ③은 두 부류 모두에 대해 여백<sup>margin</sup>이 커서 웬만한 변형은 오분류로 이어지지 않음\n",
     " - <font color=\"Red\"><b>따라서, ②에 비해 ③이 일반화 능력이 뛰어나고 결국 분류기 품질 면에서 더 좋다고 할 수 있음~!! </b></font>\n",
-    "<img src=\"5.1.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.1.jpg\">"
    ]
   },
   {
@@ -89,11 +89,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.1.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.1.jpg\">\n",
     "\n",
     "** 그림 6.1 선형으로 분리되지 않는 데이터 집합 예제 네가지 **\n",
     "\n",
-    "<img src=\"6.2.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.2.jpg\">\n",
     "\n",
     "** 그림 6.2 프레임 A는 선형으로 분리 가능한 데이터를 보인 것인다. 프레임 B, C, D는 이 데이터를 두 개의 분류 항목으로 선형 분리가 가능한 경우들을 보인 것이다. **\n"
    ]
@@ -118,7 +118,7 @@
     " - 상수 b : 오프셋(offset)\n",
     " - w, b : 데이터를 위한 분리선 또는 초평면을 묘사하는 것\n",
     " \n",
-    "<img src=\"6.3.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.3.jpg\">\n",
     "\n",
     "** 그림 6.3 점 A에서 분리면까지의 거리는 분리면에 수직인 하나의 선에 의해 측정된다. **"
    ]
@@ -141,7 +141,7 @@
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
-    "<img src=\"수식 2.jpg\"> \n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 2.jpg\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
     "* <font size=\"3\"><b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b></font>\n",
     " - <font size=\"3\"><b>label*(w<sup>T</sup>x+b)</b></font>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
@@ -154,13 +154,13 @@
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"수식 4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 4.jpg\">\n",
     "<br><br>\n",
     "* <font color=\"blue\"><font size=\"3\"><b>여유 변수(slack variable)</b></font></font>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
-    "<img src=\"수식 5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 5.jpg\">\n",
     " - 상수 c는 마진을 크게 만들고자 하는 우리의 목표와 대부분의 예제가 기능적인 1.0 이상의 마진을 갖도록 보장하는 것 사이에서 가중치를 조절\n",
     " - 상수 c는 최적화 코드의 인자이므로 변경할 수 있으며, 그에 따라 다른 결과를 얻을 수 있음\n",
     " - 먼저, 알파를 해결하면 알파의 관점에서 분리 초평면을 표현할 수 있음\n",
@@ -248,7 +248,7 @@
     "* 그런 다음, 남아 있는 알파들에서 임의로 두 번째 알파 선택\n",
     "<br> (※ 여기서 주의해야 할 점은 두 알파를 동시에 변경해야 한다는 것)\n",
     " - 다음과 같은 제약 조건이 있기 때문\n",
-    "<img src=\"제약조건.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/제약조건.jpg\">\n",
     "* 알파 하나만을 변경하는 것은 제약 조건을 위반하는 것이므로 <b>항상 알파 두 개를 한꺼번에 변경</b>\n",
     " - 이를 수행하기 위해 <font color=\"Blue\"><font size=\"3\"><b>도움 함수</b></font></font>를 생성\n",
     " - 이 함수는 범위 내에서 임의로 하나의 정수를 선택\n",
