--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -1962,7 +1962,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.4.jpg\">\n",
     "\n",
     "** 그림 6.4 간략한 형태의 SMO를 실행하여 원이 그려진 지지 벡터와 분리 초평면을 보여주는 SMO 표본 데이터 집합 **"
    ]
@@ -2433,7 +2433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.5.jpg\">\n",
     "\n",
     "** 그림 6.5 데이터 집합으로 전체 SMO 알고리즘을 실행하여 얻은 지지 벡터. 이 결과는 그림 6.4와는 약간 다르다 **"
    ]
@@ -2488,7 +2488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.6.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.6.jpg\">\n",
     "\n",
     "** 그림 6.6 이 데이터 점들을 2차원 평면에서 직선만으로 분리한다는 것은 어려운 일이다. 하지만, 사각형으로 된 점과 원으로 된 점을 분리하는 어떠한 패턴이 분명 존재한다. **"
    ]
@@ -2509,7 +2509,7 @@
     " - 하나의 벡터를 가지고 벡터 간의 거리를 기반으로 하는 하나의 스칼라를 출력하는 함수\n",
     " - 가우스(Gaussian) 확률 분포 사용\n",
     "\n",
-    "<img src=\"gaussian.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/gaussian.jpg\">\n",
     " - σ는 사용자 정의(user-define) 매개변수, \"거리 범위(reach)\" 또는 얼마나 빨리 0으로 떨어지는지를 결정\n",
     "<br><br>\n",
     "* <font color=\"Blue\"><font size=\"3\"><b> 가우스 확률 분포 </b></font></font>\n",
@@ -3144,7 +3144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.7.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.7.jpg\">\n",
     "\n",
     "** 그림 6.7 사용자 정의 매개변수 k1=0.1인 반지름 성향 함수. 사용자 정의 매개변수는 각 지지 벡터에 대한 영향력을 감소시키므로 더 많은 지지 벡터가 필요하다. **"
    ]
@@ -3153,7 +3153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"6.8.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/6.8.jpg\">\n",
     "\n",
     "** 그림 6.8 사용자 매개변수 k1=1.3인 반지름 성향 커널 함수. 여기서는 그림 6.7보다 더 적은 수의 지지 벡터를 가지고 실험헀다. 지지 벡터는 의사 결정 영역 주변에 무리지어 나타난다. **"
    ]
@@ -4599,7 +4599,7 @@
    "source": [
     "** 표 6.1 필기체 숫자에 커널 설정을 달리한 성능 비교 **\n",
     "\n",
-    "<img src=\"Table 6.1.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/Table 6.1.jpg\">"
    ]
   },
   {
