--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -154,7 +154,7 @@
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 4.JPG\">\n",
     "<br><br>\n",
     "* <font color=\"blue\"><font size=\"3\"><b>여유 변수(slack variable)</b></font></font>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
