--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b>SMO (Sequential Minimal Optimization)</b></font></font>\n",
+    "* <b>SMO (Sequential Minimal Optimization)</b>\n",
     " - 순차적 최소 최적화\n",
     " - 커다란 최적화 문제를 가짐\n",
     " - 이 문제는 다시 작은 문제들로 나누어짐\n",
@@ -223,7 +223,7 @@
     "* SMO 알고리즘은 알파와 b의 집합을 찾는 것\n",
     " - 알파의 집합을 구하게 되면 가중치 w는 쉽게 계산되며 분피 초평면을 구할 수 있음\n",
     "<br><br>\n",
-    "* <font size=\"3\"><b> SMO 알고리즘의 동작 방식 </b></font>\n",
+    "* <b> SMO 알고리즘의 동작 방식 </b>\n",
     " 1. 각각의 사이클을 최적화하기 위하여 두 개의 알파를 선택\n",
     " 2. 적당한 알파의 쌍을 찾게 되면, 그 중 하나는 값을 증가시키고 다른 하나는 줄임\n",
     "  <br> (※ 적당한 알파를 구하기 위해서는 알파 집합이 조건을 정확하게 충족해야 함)\n",
@@ -250,7 +250,7 @@
     " - 다음과 같은 제약 조건이 있기 때문\n",
     "<img src=\"../../src/Ch06_SVM/Img/제약조건.jpg\">\n",
     "* 알파 하나만을 변경하는 것은 제약 조건을 위반하는 것이므로 <b>항상 알파 두 개를 한꺼번에 변경</b>\n",
-    " - 이를 수행하기 위해 <font color=\"Blue\"><font size=\"3\"><b>도움 함수</b></font></font>를 생성\n",
+    " - 이를 수행하기 위해 <b>도움 함수</b>를 생성\n",
     " - 이 함수는 범위 내에서 임의로 하나의 정수를 선택\n",
     " - 또한, 너무 큰 값을 얻지 않도록 값을 고정하는 도움 함수도 필요"
    ]
@@ -384,8 +384,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"Red\"> ※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
-    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </font>"
+    " ※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
+    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음"
    ]
   },
   {
@@ -1978,21 +1978,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Orange\"><b>간략한 형태의 SMO</b></font>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
-    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <font color=\"Blue\"><font size=\"3\"><b>전체 플랫 SMO 알고리즘</b></font></font>으로 변경하여 사용\n",
+    "* <b>간략한 형태의 SMO</b>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
+    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <b>전체 플랫 SMO 알고리즘</b>으로 변경하여 사용\n",
     "<br><br>\n",
     "* 최적화 부분에서 알파를 변경하되 나머지는 이전에 사용된 상태를 그대로 유지함\n",
     "* 단지 다른 것은 최적화에서 사용할 알파를 선택하는 방법\n",
     "* 전체 플랫은 몇 가지 경험적인(heuristic) 방법을 사용하여 속도를 개선\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>플랫 SMO 알고리즘</b></font></font> <br> \n",
+    "* <b>플랫 SMO 알고리즘</b> <br> \n",
     " <b>1. 첫 번째 알파를 선택하기 위해서 외부 반복문 수행</b>\n",
     " <br> 외부 반복문은 전체 데이터 집합에서 하나, 범위가 없는 알파에서 하나씩 이들 사이를 번갈아 가며 수행\n",
     " <br> (※ 범위가 없는 알파는 범위가 0 또는 한정되지 않는 알파를 말함)<br>\n",
     " <b>2. 두 번째 알파는 첫 번째 알파가 선택된 다음 내부 반복문을 사용하여 선택</b> \n",
     " <br> 이 알파는 최적화 하는 동안 단계 크기를 가장 크게 하는 방법으로 선택됨\n",
     " <br> 오류 값에 대한 전역 캐시(global cache)를 생성하며, 단계 크기 또는 Ei-Ej를 가장 크게 하는 알파 선택\n",
-    " <br> (※ <font color=\"Orange\"><b>간략한 형태의 SMO</b></font> 에서는 j를 선택한 후 오류 Ej를 계산했었음) "
+    " <br> (※ <b>간략한 형태의 SMO</b><에서는 j를 선택한 후 오류 Ej를 계산했었음) "
    ]
   },
   {
@@ -2449,12 +2449,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널(Kernel)</b></font></font>\n",
+    "* <b>커널(Kernel)</b>\n",
     " - 선형 데이터를 위해 사용했던 방법 중에서 이 그림의 패턴을 포착하기 위한 성능 좋은 도구 사용할 방법\n",
     " - 데이터를 분류기가 이해하기 쉬운 형태로 변환하기 위해 커널이라는 것을 사용\n",
     "<br><br>\n",
     "* 이번 절에서는 커널과 지지 벡터 머신을 사용하는 방법을 설명\n",
-    "* 이후, 커널 중 <font color=\"Blue\"><font size=\"3\"><b>반지름 성향(radial bias) 함수</b></font></font> 설명\n",
+    "* 이후, 커널 중 <b>반지름 성향(radial bias) 함수</b> 설명\n",
     "* 이 함수를 기존 분류기에 적용"
    ]
   },
@@ -2473,14 +2473,14 @@
     "* <b> \"하나의 속성 공간에서 다른 속성 공간으로 매핑(mapping)한다\" </b>\n",
     " - 일반적으로, 이러한 매핑은 저차원의 속성 공간에서 고차원 공간으로 이동시킬 때 사용}\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널(Kernel)</b></font></font>\n",
+    "* <b>커널(Kernel)</b>\n",
     " - 하나의 속성 공간에서 다른 속성 공간으로 매핑하는 것\n",
     " - 어려운 형태의 데이터를 쉬운 형태로 변환하는 포장지나 인터페이스처럼 생각해도 됨\n",
     "* SVM 최적화에 대한 장점\n",
     " - 모든 연산이 내적 측면에서 다루어질 수 있다는 것\n",
     " <br> (※ 내적은 스칼라 또는 단일 수를 산출하기 위해 두 개의 벡터를 함께 곱하는 것)\n",
     " - 간소화하지 않은 커널 함수를 가지고 내적을 대신할 수 있음\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널 트릭(kernel trick)</b></font></font> 또는 <font color=\"Blue\"><font size=\"3\"><b>커널 서브스테이션(kernel substation)</b></font></font>\n",
+    "* <b>커널 트릭(kernel trick)</b> 또는 <b>커널 서브스테이션(kernel substation)</b>\n",
     " - 커널을 가지고 내적을 대신하는 것"
    ]
   },
@@ -2504,7 +2504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b> 반지름 성향 함수(Radial Bias Function) </b></font></font>\n",
+    "* <b> 반지름 성향 함수(Radial Bias Function) </b>\n",
     " - 커널이며, 종종 지지 벡터 머신과 함께 사용됨\n",
     " - 하나의 벡터를 가지고 벡터 간의 거리를 기반으로 하는 하나의 스칼라를 출력하는 함수\n",
     " - 가우스(Gaussian) 확률 분포 사용\n",
