--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -141,7 +141,7 @@
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 2.jpg\"> \n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 2.JPG\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
     "* <b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b>\n",
     " - <b>label*(w<sup>T</sup>x+b)</b>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
@@ -156,11 +156,11 @@
     "* 최적화 함수의 표현\n",
     "<img src=\"../../src/Ch06_SVM/Img/수식 4.JPG\">\n",
     "<br><br>\n",
-    "* <font color=\"blue\"><font size=\"3\"><b>여유 변수(slack variable)</b></font></font>\n",
+    "* <b>여유 변수(slack variable)</b>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 5.JPG\">\n",
     " - 상수 c는 마진을 크게 만들고자 하는 우리의 목표와 대부분의 예제가 기능적인 1.0 이상의 마진을 갖도록 보장하는 것 사이에서 가중치를 조절\n",
     " - 상수 c는 최적화 코드의 인자이므로 변경할 수 있으며, 그에 따라 다른 결과를 얻을 수 있음\n",
     " - 먼저, 알파를 해결하면 알파의 관점에서 분리 초평면을 표현할 수 있음\n",
@@ -248,7 +248,7 @@
     "* 그런 다음, 남아 있는 알파들에서 임의로 두 번째 알파 선택\n",
     "<br> (※ 여기서 주의해야 할 점은 두 알파를 동시에 변경해야 한다는 것)\n",
     " - 다음과 같은 제약 조건이 있기 때문\n",
-    "<img src=\"../../src/Ch06_SVM/Img/제약조건.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/제약조건.JPG\">\n",
     "* 알파 하나만을 변경하는 것은 제약 조건을 위반하는 것이므로 <b>항상 알파 두 개를 한꺼번에 변경</b>\n",
     " - 이를 수행하기 위해 <b>도움 함수</b>를 생성\n",
     " - 이 함수는 범위 내에서 임의로 하나의 정수를 선택\n",
@@ -2509,13 +2509,13 @@
     " - 하나의 벡터를 가지고 벡터 간의 거리를 기반으로 하는 하나의 스칼라를 출력하는 함수\n",
     " - 가우스(Gaussian) 확률 분포 사용\n",
     "\n",
-    "<img src=\"../../src/Ch06_SVM/Img/gaussian.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/Gaussian.JPG\">\n",
     " σ는 사용자 정의(user-define) 매개변수, \"거리 범위(reach)\" 또는 얼마나 빨리 0으로 떨어지는지를 결정\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b> 가우스 확률 분포 </b></font></font>\n",
+    "* <b> 가우스 확률 분포 </b>\n",
     " - 데이터의 속성 공간에서 높은 속성 공간으로 매핑\n",
     " - 이 커널을 가지고 좋은 결과를 얻을 수 있음\n",
-    " <br> (<font color=\"purple\"><b>***kernelTrans()*** </b></font> 用)"
+    " <br> (<b>***kernelTrans()*** </b> 用)"
    ]
   },
   {
@@ -4599,7 +4599,7 @@
    "source": [
     "** 표 6.1 필기체 숫자에 커널 설정을 달리한 성능 비교 **\n",
     "\n",
-    "<img src=\"../../src/Ch06_SVM/Img/Table 6.1.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/Table 6.1.JPG\">"
    ]
   },
   {
@@ -4615,7 +4615,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font size=\"3\"><b>지지 벡터 머신</b></font>은 분류기의 한 유형\n",
+    "* <b>지지 벡터 머신</b>은 분류기의 한 유형\n",
     "* 머신이라고 불리는 이유는, 이진수로 의사 결정을 생성하는 의사결정 머신이기 때문\n",
     "* 지지 벡터들은 학습하고자 하는 것에 대해 작은 일반화 오류를 가지도록 학습\n",
     "* 이러한 장점 때문에 지지 벡터 머신은 인기가 있으며, 비지도 학습에서 가장 좋은 알고리즘 중 하나로 간주\n",
@@ -4636,7 +4636,7 @@
    "source": [
     "## Reference \n",
     "\n",
-    "* <font color=\"Sky Blue\"><font size=\"3\"><b> Machine Learning in Action pdf <font size=\"2\">(Eng Ver)</font> </b></font></font>\n",
+    "* <b> Machine Learning in Action pdf (Eng Ver)</b>\n",
     "<br> http://www2.ift.ulaval.ca/~chaib/IFT-4102-7025/public_html/Fichiers/Machine_Learning_in_Action.pdf"
    ]
   }
