--- a/doc/Ch06_SVM/SVM.ipynb
+++ b/doc/Ch06_SVM/SVM.ipynb
@@ -148,13 +148,13 @@
     " - 우리는 가장 좋은 값을 찾아야만 하며, 이 값들은 몇 가지 제약 조건을 충족해야만 함\n",
     " - 제약 조건은, <b>label*(w<sup>T</sup>x+b)</b>이 1.0 또는 이보다 더 큰 값이 되어야 한다는 것\n",
     "<br><br>\n",
-    "* <b>라그랑지 곱수 (Lagrange multipliers)</b></f\n",
+    "* <b>라그랑지 곱수 (Lagrange multipliers)</b>\n",
     " - 제약적인 최적화 문제와 같은 유형을 해결하기 위해 라그랑지 곱수 방법 사용\n",
     " - 라그랑지 곱수를 사용하면 제약 조건 관점에서 문제를 표현할 수 있음\n",
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 4.JPG\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 3.JPG\">\n",
     "<br><br>\n",
     "* <b>여유 변수(slack variable)</b>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
