--- a/doc/Ch06_SVM/SVM_font.ipynb
+++ b/doc/Ch06_SVM/SVM_font.ipynb
@@ -30,7 +30,7 @@
     "* 분류 문제를 풀기 위한 패턴 인식 분야에서의 새로운 방법론 중 하나\n",
     "<br>\n",
     "### 기존의 분류 방법과 SVM 기본 원리 차이점\n",
-    "* 신경망을 포함한 기존 방법들은 분류 '오류율을 최소화'하려는 목적으로 설계 <font color=\"red\">[b, c, d 모두 해당]</font>\n",
+    "* 신경망을 포함한 기존 방법들은 분류 '오류율을 최소화'하려는 목적으로 설계 <span style=\"color:Red\">[b, c, d 모두 해당]</span>\n",
     "* 하지만, SVM은 <u>두 부류 사이에 존재하는 '여백을<sup>margin</sup> 최대화'하여 일반화 능력을 극대화함</u> <font color=\"Red\"><b>[d]</b></font>\n",
     "* SVM은 일반화 측면에서 다른 분류기와 비교하면 대등하거나 우수한 것으로 알려져 있음\n",
     "* SVM은 N<sup>2</sup>개 이상의 항을 갖는 수식을 다루어야 함\n",
