--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color:SkyBlue\"><b>SVM의 정의</b></span>\n",
+    "## <span style=\"color:#00BFFF\"><b>SVM의 정의</b></span>\n",
     "* 분류 문제를 풀기 위한 패턴 인식 분야에서의 새로운 방법론 중 하나\n",
     "<br>\n",
     "### 기존의 분류 방법과 SVM 기본 원리 차이점\n",
