--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"Sky Blue\"><b>SVM의 정의</b></font>\n",
+    "## <span style=\"color:#38ACEC\"><b>SVM의 정의</b></span>\n",
     "* 분류 문제를 풀기 위한 패턴 인식 분야에서의 새로운 방법론 중 하나\n",
     "\n",
     "### 기존의 분류 방법과 SVM 기본 원리 차이점\n",
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"Sky Blue\"><b>SVM 이론의 발상</b></font>\n",
+    "## <span style=\"color:#38ACEC\"><b>SVM 이론의 발상</b></span>\n",
     "* 세 개의 분류기 (결정 직선)를 보여주고 있음\n",
     "* 신경망 학습 알고리즘은 초기값으로 ①을 가지고 출발하였다면 오류를 줄여 가는 과정을 반복하여 ② 또는 ③과 같은 직선을 찾아 감\n",
     "* 만일 ②에 도달하였다면 거기에서 멈춤 \n",
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*  <font color=\"Blue\"><font size=\"3\"><b>지지 벡터 머신</b></font></font>\n",
+    "*  <span style=\"color:Blue\"><font size=\"3\"><b>지지 벡터 머신</b></font></span>\n",
     "* <font color=\"Blue\"><font size=\"3\"><b>선형 분리(linearly separable)</b></font></font>\n",
     " - 하나의 직선을 그려 선의 한쪽에는 한 가지 분류 항목만을 가지는 데이터 점들이 오도록 하고, 선의 다른 한쪽에는 다른 분류 항목을 가진 데이터 점들이 오게 함으로써 데이터 점들을 분리하는 것\n",
     "* <font color=\"Blue\"><font size=\"3\"><b>초평면 분리(separating hyperplane)</b></font></font>\n",
