--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -69,16 +69,16 @@
    "metadata": {},
    "source": [
     "*  <span style=\"color:Blue\"><span style=\"size:3\"><b>지지 벡터 머신</b></span></span>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>선형 분리(linearly separable)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>선형 분리(linearly separable)</b></span>\n",
     " - 하나의 직선을 그려 선의 한쪽에는 한 가지 분류 항목만을 가지는 데이터 점들이 오도록 하고, 선의 다른 한쪽에는 다른 분류 항목을 가진 데이터 점들이 오게 함으로써 데이터 점들을 분리하는 것\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>초평면 분리(separating hyperplane)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>초평면 분리(separating hyperplane)</b></span>\n",
     " - 선 : 데이터 집합을 분리하는데 사용하는 것\n",
     " - 초평면 (hyperplane) : N-1차원 (의사 결정 범위)\n",
     " - (의사 결정 범위 : 하나의 측면에 있는 모든 것은 하나의 분류 항목에 속하며, 또 다른 측면에 있는 모든 것은 다른 분류 항목에 속하게 됨)\n",
     "* N-1차원 - 초평면 ~> 의사 결정 범위(decision boundary)\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>마진(margin)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>마진(margin)</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점을 찾기를 원하면서, 이 지점이 가능한 한 분리선에서 멀리 떨어져 있기를 원하는 것 (※ 마진이 가능한 한 큰게 좋음)\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>지지 벡터</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>지지 벡터</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점 (※ 분리선에서 지지 벡터까지의 거리를 가장 크게 해야하며, 이 문제를 최적화하는 방법을 찾아야 함)\n",
     " \n",
     "* 여백(margin)이라는 개념을 어떻게 공식화 할 것인가? \n",
