--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -109,11 +109,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font size=\"4\"><b>w<sup>T</sup>+b</b></font> => 초평면 분리 얻는 방법~!!\n",
-    "* 이진 분류를 위한 결정 초평면의 표현 : <font size=\"4\"><b>d(x)=w<sup>T</sup>x+b=0</b></font>\n",
+    "* <b>w<sup>T</sup>+b</b> => 초평면 분리 얻는 방법~!!\n",
+    "* 이진 분류를 위한 결정 초평면의 표현 : <b>d(x)=w<sup>T</sup>x+b=0</b>\n",
     " - x : 샘플을 나타내는 특징 벡터\n",
     " - w와 b는 결정 초평면을 정의하는 매개 변수\n",
-    "* <font size=\"4\"><b>|w<sup>T</sup>x+b|/||w||</b></font>\n",
+    "* <b>|w<sup>T</sup>x+b|/||w||</b>\n",
     " - 점 A에서 분리면까지의 거리를 구하고자 할 때, 면, 선에 직각 또는 수직인 선의 길이를 측정\n",
     " - 상수 b : 오프셋(offset)\n",
     " - w, b : 데이터를 위한 분리선 또는 초평면을 묘사하는 것\n",
@@ -127,28 +127,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></font>"
+    "### <span style=\"color:Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></span>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font size=\"3\"><u><b>분류기가 어떻게 동작하는지 이해</b>하게 되면 최적화 문제를 이해하는 데 도움이 될 것</u></font>\n",
+    "* <b>분류기가 어떻게 동작하는지 이해</b>하게 되면 최적화 문제를 이해하는 데 도움이 될 것\n",
     "<br><br>\n",
     "\n",
-    "* <font size=\"3\"><b>label*(w<sup>T</sup>x+b)</b></font>\n",
+    "* <b>label*(w<sup>T</sup>x+b)</b>\n",
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
     "<img src=\"수식 2.jpg\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
-    "* <font size=\"3\"><b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b></font>\n",
-    " - <font size=\"3\"><b>label*(w<sup>T</sup>x+b)</b></font>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
+    "* <b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b>\n",
+    " - <b>label*(w<sup>T</sup>x+b)</b>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
     " - 우리는 가장 좋은 값을 찾아야만 하며, 이 값들은 몇 가지 제약 조건을 충족해야만 함\n",
-    " - 제약 조건은, <font size=\"3\"><b>label*(w<sup>T</sup>x+b)</b></font>이 1.0 또는 이보다 더 큰 값이 되어야 한다는 것\n",
+    " - 제약 조건은, <b>label*(w<sup>T</sup>x+b)</b>이 1.0 또는 이보다 더 큰 값이 되어야 한다는 것\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>라그랑지 곱수 (Lagrange multipliers)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>라그랑지 곱수 (Lagrange multipliers)</b></span>\n",
     " - 제약적인 최적화 문제와 같은 유형을 해결하기 위해 라그랑지 곱수 방법 사용\n",
     " - 라그랑지 곱수를 사용하면 제약 조건 관점에서 문제를 표현할 수 있음\n",
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
@@ -156,7 +156,7 @@
     "* 최적화 함수의 표현\n",
     "<img src=\"수식 4.jpg\">\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>여유 변수(slack variable)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b> SMO (Sequential Minimal Optimization)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b> SMO (Sequential Minimal Optimization)</b></span>\n",
     " - 순차적 최소 최적화\n",
     " - 커다란 최적화 문제를 가짐\n",
     " - 이 문제는 다시 작은 문제들로 나누어짐\n",
@@ -384,8 +384,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color=\"Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
-    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </font> "
+    " <span style=\"color:Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
+    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </span> "
    ]
   },
   {
@@ -2613,21 +2613,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Orange\"><b>간략한 형태의 SMO</b></font>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
-    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <font color=\"Blue\"><font size=\"3\"><b>전체 플랫 SMO 알고리즘</b></font></font>으로 변경하여 사용\n",
+    "* <span style=\"color:Orange\"><b>간략한 형태의 SMO</b></span>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
+    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <span style=\"color:Blue\"><b>전체 플랫 SMO 알고리즘</b></span>으로 변경하여 사용\n",
     "<br><br>\n",
     "* 최적화 부분에서 알파를 변경하되 나머지는 이전에 사용된 상태를 그대로 유지함\n",
     "* 단지 다른 것은 최적화에서 사용할 알파를 선택하는 방법\n",
     "* 전체 플랫은 몇 가지 경험적인(heuristic) 방법을 사용하여 속도를 개선\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>플랫 SMO 알고리즘</b></font></font> <br> \n",
+    "* <span style=\"color:Blue\"><b>플랫 SMO 알고리즘</b></span> <br> \n",
     " <b>1. 첫 번째 알파를 선택하기 위해서 외부 반복문 수행</b>\n",
     " <br> 외부 반복문은 전체 데이터 집합에서 하나, 범위가 없는 알파에서 하나씩 이들 사이를 번갈아 가며 수행\n",
     " <br> (※ 범위가 없는 알파는 범위가 0 또는 한정되지 않는 알파를 말함)<br>\n",
     " <b>2. 두 번째 알파는 첫 번째 알파가 선택된 다음 내부 반복문을 사용하여 선택</b> \n",
     " <br> 이 알파는 최적화 하는 동안 단계 크기를 가장 크게 하는 방법으로 선택됨\n",
     " <br> 오류 값에 대한 전역 캐시(global cache)를 생성하며, 단계 크기 또는 Ei-Ej를 가장 크게 하는 알파 선택\n",
-    " <br> (※ <font color=\"Orange\"><b>간략한 형태의 SMO</b></font> 에서는 j를 선택한 후 오류 Ej를 계산했었음) "
+    " <br> (※ <<span style=\"color:Orange">b>간략한 형태의 SMO</b></span>에서는 j를 선택한 후 오류 Ej를 계산했었음) "
    ]
   },
   {
@@ -3084,12 +3084,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널(Kernel)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>커널(Kernel)</b></span>\n",
     " - 선형 데이터를 위해 사용했던 방법 중에서 이 그림의 패턴을 포착하기 위한 성능 좋은 도구 사용할 방법\n",
     " - 데이터를 분류기가 이해하기 쉬운 형태로 변환하기 위해 커널이라는 것을 사용\n",
     "<br><br>\n",
     "* 이번 절에서는 커널과 지지 벡터 머신을 사용하는 방법을 설명\n",
-    "* 이후, 커널 중 <font color=\"Blue\"><font size=\"3\"><b>반지름 성향(radial bias) 함수</b></font></font> 설명\n",
+    "* 이후, 커널 중 <span style=\"color:Blue\"><b>반지름 성향(radial bias) 함수</b></span> 설명\n",
     "* 이 함수를 기존 분류기에 적용"
    ]
   },
@@ -3108,14 +3108,14 @@
     "* <b> \"하나의 속성 공간에서 다른 속성 공간으로 매핑(mapping)한다\" </b>\n",
     " - 일반적으로, 이러한 매핑은 저차원의 속성 공간에서 고차원 공간으로 이동시킬 때 사용}\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널(Kernel)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>커널(Kernel)</b></span>\n",
     " - 하나의 속성 공간에서 다른 속성 공간으로 매핑하는 것\n",
     " - 어려운 형태의 데이터를 쉬운 형태로 변환하는 포장지나 인터페이스처럼 생각해도 됨\n",
     "* SVM 최적화에 대한 장점\n",
     " - 모든 연산이 내적 측면에서 다루어질 수 있다는 것\n",
     " <br> (※ 내적은 스칼라 또는 단일 수를 산출하기 위해 두 개의 벡터를 함께 곱하는 것)\n",
     " - 간소화하지 않은 커널 함수를 가지고 내적을 대신할 수 있음\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b>커널 트릭(kernel trick)</b></font></font> 또는 <font color=\"Blue\"><font size=\"3\"><b>커널 서브스테이션(kernel substation)</b></font></font>\n",
+    "* <span style=\"color:Blue\"><b>커널 트릭(kernel trick)</b></span> 또는 <span style=\"color:Blue\"><b>커널 서브스테이션(kernel substation)</b></span>\n",
     " - 커널을 가지고 내적을 대신하는 것"
    ]
   },
@@ -3139,7 +3139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b> 반지름 성향 함수(Radial Bias Function) </b></font></font>\n",
+    "* <span style=\"color:Blue\"><b> 반지름 성향 함수(Radial Bias Function) </b></span>\n",
     " - 커널이며, 종종 지지 벡터 머신과 함께 사용됨\n",
     " - 하나의 벡터를 가지고 벡터 간의 거리를 기반으로 하는 하나의 스칼라를 출력하는 함수\n",
     " - 가우스(Gaussian) 확률 분포 사용\n",
@@ -3147,10 +3147,10 @@
     "<img src=\"gaussian.jpg\">\n",
     " σ는 사용자 정의(user-define) 매개변수, \"거리 범위(reach)\" 또는 얼마나 빨리 0으로 떨어지는지를 결정\n",
     "<br>\n",
-    "* <font color=\"Blue\"><font size=\"3\"><b> 가우스 확률 분포 </b></font></font>\n",
+    "* <span style=\"color:Blue\"><b> 가우스 확률 분포 </b></span>\n",
     " - 데이터의 속성 공간에서 높은 속성 공간으로 매핑\n",
     " - 이 커널을 가지고 좋은 결과를 얻을 수 있음\n",
-    " <br> (<font color=\"Purple\"><b>***kernelTrans()*** </b></font> 用)"
+    " <br> (<span style=\"color:Purple\"><b>***kernelTrans()*** </b></span> 用)"
    ]
   },
   {
@@ -5250,7 +5250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><font size=\"3\"><b>지지 벡터 머신</b></font></font>은 분류기의 한 유형\n",
+    "* <span style=\"color:Blue\"><b>지지 벡터 머신</b></span>은 분류기의 한 유형\n",
     "* 머신이라고 불리는 이유는, 이진수로 의사 결정을 생성하는 의사결정 머신이기 때문\n",
     "* 지지 벡터들은 학습하고자 하는 것에 대해 작은 일반화 오류를 가지도록 학습\n",
     "* 이러한 장점 때문에 지지 벡터 머신은 인기가 있으며, 비지도 학습에서 가장 좋은 알고리즘 중 하나로 간주\n",
@@ -5273,7 +5273,7 @@
    "source": [
     "## Reference \n",
     "\n",
-    "* <font color=\"Sky Blue\"><font size=\"3\"><b> Machine Learning in Action pdf(Eng Ver)</b></font></font>\n",
+    "* <span style=\"color:#3BB9FF\"><b> Machine Learning in Action pdf(Eng Ver)</b></span>\n",
     "<br> http://www2.ift.ulaval.ca/~chaib/IFT-4102-7025/public_html/Fichiers/Machine_Learning_in_Action.pdf"
    ]
   }
