--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*  <span style=\"color:Blue\"><span style=\"size:3\"><b>지지 벡터 머신</b></span></span>\n",
+    "*  <span style=\"color:Blue\"><b>지지 벡터 머신</b></span>\n",
     "* <span style=\"color:Blue\"><b>선형 분리(linearly separable)</b></span>\n",
     " - 하나의 직선을 그려 선의 한쪽에는 한 가지 분류 항목만을 가지는 데이터 점들이 오도록 하고, 선의 다른 한쪽에는 다른 분류 항목을 가진 데이터 점들이 오게 함으로써 데이터 점들을 분리하는 것\n",
     "* <span style=\"color:Blue\"><b>초평면 분리(separating hyperplane)</b></span>\n",
