--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <span style=\"color:#3BB9FF\"><b>SVM 이론의 발상</b></span>\n",
+    "## <span style=\"color:#1589FF\"><b>SVM 이론의 발상</b></span>\n",
     "* 세 개의 분류기 (결정 직선)를 보여주고 있음\n",
     "* 신경망 학습 알고리즘은 초기값으로 ①을 가지고 출발하였다면 오류를 줄여 가는 과정을 반복하여 ② 또는 ③과 같은 직선을 찾아 감\n",
     "* 만일 ②에 도달하였다면 거기에서 멈춤 \n",
