--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -36,7 +36,7 @@
     "* SVM은 N<sup>2</sup>개 이상의 항을 갖는 수식을 다루어야 함\n",
     "* 주어진 조건 하에서 수식을 최대화하는 조건부 최적화 문제를 풀어야 함\n",
     "* 따라서, 구현이 까다로운 편\n",
-    "<img src=\"6.2.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/6.2.jpg\">"
    ]
   },
   {
@@ -54,7 +54,7 @@
     " - ②는 발생하는 패턴에서 약간의 변형이 발생하면 결정 직선을 넘어 오분류될 가능성이 큼\n",
     " - 하지만, 직선 ③은 두 부류 모두에 대해 여백<sup>margin</sup>이 커서 웬만한 변형은 오분류로 이어지지 않음\n",
     " - 따라서, ②에 비해 ③이 일반화 능력이 뛰어나고 결국 분류기 품질 면에서 더 좋다고 할 수 있음~!! \n",
-    "<img src=\"5.1.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.1.jpg\">"
    ]
   },
   {
