--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -36,7 +36,7 @@
     "* SVM은 N<sup>2</sup>개 이상의 항을 갖는 수식을 다루어야 함\n",
     "* 주어진 조건 하에서 수식을 최대화하는 조건부 최적화 문제를 풀어야 함\n",
     "* 따라서, 구현이 까다로운 편\n",
-    "<img src=/"../../src/Ch06_SVM/Img/6.2.jpg/">"
+    "<img src=\"..\..\src\Ch06_SVM\Img\6.2.jpg\">"
    ]
   },
   {
