--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -68,10 +68,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*  <font color=\"Blue\"><b>지지 벡터 머신</b></font>\n",
-    "* <font color=\"Blue\"><b>선형 분리(linearly separable)</b></font>\n",
+    "*  <span style=\"color:Blue\"><b>지지 벡터 머신</b></span>\n",
+    "* <span style=\"color:Blue\"><b>선형 분리(linearly separable)</b></span>\n",
     " - 하나의 직선을 그려 선의 한쪽에는 한 가지 분류 항목만을 가지는 데이터 점들이 오도록 하고, 선의 다른 한쪽에는 다른 분류 항목을 가진 데이터 점들이 오게 함으로써 데이터 점들을 분리하는 것\n",
-    "* <font color=\"Blue\"><b>초평면 분리(separating hyperplane)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>초평면 분리(separating hyperplane)</b></span>\n",
     " - 선 : 데이터 집합을 분리하는데 사용하는 것\n",
     " - 초평면 (hyperplane) : N-1차원 (의사 결정 범위)\n",
     " - (의사 결정 범위 : 하나의 측면에 있는 모든 것은 하나의 분류 항목에 속하며, 또 다른 측면에 있는 모든 것은 다른 분류 항목에 속하게 됨)\n",
