--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -76,9 +76,9 @@
     " - 초평면 (hyperplane) : N-1차원 (의사 결정 범위)\n",
     " - (의사 결정 범위 : 하나의 측면에 있는 모든 것은 하나의 분류 항목에 속하며, 또 다른 측면에 있는 모든 것은 다른 분류 항목에 속하게 됨)\n",
     "* N-1차원 - 초평면 ~> 의사 결정 범위(decision boundary)\n",
-    "* <font color=\"Blue\"><b>마진(margin)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>마진(margin)</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점을 찾기를 원하면서, 이 지점이 가능한 한 분리선에서 멀리 떨어져 있기를 원하는 것 (※ 마진이 가능한 한 큰게 좋음)\n",
-    "* <font color=\"Blue\"><b>지지 벡터</b></font>\n",
+    "* <span style=\"color:Blue\"><b>지지 벡터</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점 (※ 분리선에서 지지 벡터까지의 거리를 가장 크게 해야하며, 이 문제를 최적화하는 방법을 찾아야 함)\n",
     " \n",
     "* 여백(margin)이라는 개념을 어떻게 공식화 할 것인가? \n",
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></font>"
+    "### <span style=\"color:Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></span>"
    ]
   },
   {
@@ -148,7 +148,7 @@
     " - 우리는 가장 좋은 값을 찾아야만 하며, 이 값들은 몇 가지 제약 조건을 충족해야만 함\n",
     " - 제약 조건은, <b>label*(w<sup>T</sup>x+b)</b>이 1.0 또는 이보다 더 큰 값이 되어야 한다는 것\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>라그랑지 곱수 (Lagrange multipliers)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>라그랑지 곱수 (Lagrange multipliers)</b></span>\n",
     " - 제약적인 최적화 문제와 같은 유형을 해결하기 위해 라그랑지 곱수 방법 사용\n",
     " - 라그랑지 곱수를 사용하면 제약 조건 관점에서 문제를 표현할 수 있음\n",
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
@@ -156,7 +156,7 @@
     "* 최적화 함수의 표현\n",
     "<img src=\"수식 4.jpg\">\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>여유 변수(slack variable)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b> SMO (Sequential Minimal Optimization)</b></font>\n",
+    "* <span style=\"color:Blue\"><b> SMO (Sequential Minimal Optimization)</b></span>\n",
     " - 순차적 최소 최적화\n",
     " - 커다란 최적화 문제를 가짐\n",
     " - 이 문제는 다시 작은 문제들로 나누어짐\n",
