--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <u><b>분류기가 어떻게 동작하는지 이해</b>하게 되면 최적화 문제를 이해하는 데 도움이 될 것</u>\n",
+    "* <b>분류기가 어떻게 동작하는지 이해</b>하게 되면 최적화 문제를 이해하는 데 도움이 될 것\n",
     "<br><br>\n",
     "\n",
     "* <b>label*(w<sup>T</sup>x+b)</b>\n",
@@ -384,8 +384,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color=\"Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
-    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </font> "
+    " <span style=\"color:Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
+    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </span> "
    ]
   },
   {
@@ -2613,21 +2613,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Orange\"><b>간략한 형태의 SMO</b></font>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
-    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <font color=\"Blue\"><b>전체 플랫 SMO 알고리즘</b></font>으로 변경하여 사용\n",
+    "* <span style=\"color:Orange\"><b>간략한 형태의 SMO</b></span>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
+    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <span style=\"color:Blue\"><b>전체 플랫 SMO 알고리즘</b></span>으로 변경하여 사용\n",
     "<br><br>\n",
     "* 최적화 부분에서 알파를 변경하되 나머지는 이전에 사용된 상태를 그대로 유지함\n",
     "* 단지 다른 것은 최적화에서 사용할 알파를 선택하는 방법\n",
     "* 전체 플랫은 몇 가지 경험적인(heuristic) 방법을 사용하여 속도를 개선\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>플랫 SMO 알고리즘</b></font> <br> \n",
+    "* <span style=\"color:Blue\"><b>플랫 SMO 알고리즘</b></span> <br> \n",
     " <b>1. 첫 번째 알파를 선택하기 위해서 외부 반복문 수행</b>\n",
     " <br> 외부 반복문은 전체 데이터 집합에서 하나, 범위가 없는 알파에서 하나씩 이들 사이를 번갈아 가며 수행\n",
     " <br> (※ 범위가 없는 알파는 범위가 0 또는 한정되지 않는 알파를 말함)<br>\n",
     " <b>2. 두 번째 알파는 첫 번째 알파가 선택된 다음 내부 반복문을 사용하여 선택</b> \n",
     " <br> 이 알파는 최적화 하는 동안 단계 크기를 가장 크게 하는 방법으로 선택됨\n",
     " <br> 오류 값에 대한 전역 캐시(global cache)를 생성하며, 단계 크기 또는 Ei-Ej를 가장 크게 하는 알파 선택\n",
-    " <br> (※ <font color=\"Orange\"><b>간략한 형태의 SMO</b></font> 에서는 j를 선택한 후 오류 Ej를 계산했었음) "
+    " <br> (※ <<span style=\"color:Orange"><b>간략한 형태의 SMO</b></span>에서는 j를 선택한 후 오류 Ej를 계산했었음) "
    ]
   },
   {
