--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -2627,7 +2627,7 @@
     " <b>2. 두 번째 알파는 첫 번째 알파가 선택된 다음 내부 반복문을 사용하여 선택</b> \n",
     " <br> 이 알파는 최적화 하는 동안 단계 크기를 가장 크게 하는 방법으로 선택됨\n",
     " <br> 오류 값에 대한 전역 캐시(global cache)를 생성하며, 단계 크기 또는 Ei-Ej를 가장 크게 하는 알파 선택\n",
-    " <br> (※ <<span style=\"color:Orange"><b>간략한 형태의 SMO</b></span>에서는 j를 선택한 후 오류 Ej를 계산했었음) "
+    " <br> (※ <span style=\"color:Orange\"><b>간략한 형태의 SMO</b></span>에서는 j를 선택한 후 오류 Ej를 계산했었음) "
    ]
   },
   {
