--- a/doc/Ch06_SVM/SVMs.ipynb
+++ b/doc/Ch06_SVM/SVMs.ipynb
@@ -141,7 +141,7 @@
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 2.jpg\"> \n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 2.JPG\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
     "* <b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b>\n",
     " - <b>label*(w<sup>T</sup>x+b)</b>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
@@ -154,7 +154,7 @@
     " - 우리의 제약 조건은 데이터 점이며, 데이터 점의 관점에서 초평면의 값을 표현할 수 있기 때문\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 3.JPG\">\n",
     "<br><br>\n",
     "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
