--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"Sky Blue\"><b>SVM의 특징</b></font>\n",
+    "##  <span style=\"color:#1589FF\"><b>SVM의 특징</b></span>\n",
     "### ■ SVM의 차별성\n",
     "* 신경망을 포함한 기존 방법들은 분류 '오류율을 최소화'하려는 목적으로 설계\n",
     "* 하지만, SVM은 <b>두 부류 사이에 존재하는 '여백을<sup>margin</sup> 최대화'하여 일반화 능력을 극대화함</b>\n",
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"Sky Blue\"><b>SVM의 발상</b></font>\n",
+    "##  <span style=\"color:#1589FF\"><b>SVM의 발상</b></span>\n",
     "* 세 개의 분류기 (결정 직선)를 보여주고 있음\n",
     "* 기존 분류 방법(ex. 신경망 학습 알고리즘)은 초기값으로 ①을 가지고 출발하였다면 오류를 줄여 가는 과정을 반복하여 ② 또는 ③과 같은 직선을 찾아 감\n",
     "* 만일 ②에 도달하였다면 거기에서 멈춤 \n",
@@ -71,13 +71,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"Sky Blue\"><b>선형 SVM</b></font>\n",
+    "##  <span style=\"color:#1589FF\"><b>선형 SVM</b></span>\n",
     "\n",
     "### ■ <b> d(x)=w<sup>T</sup>x+b=0 </b>  \n",
     " - 이진 분류를 위한 결정 초평면<sup> decision hyperplane </sup> 표현\n",
     " - x: 샘플을 나타내는 특징 벡터\n",
     " - w, b: 결정 초평면을 정의하는 매개 변수\n",
-    " <br> (※ <font color=\"Red\"><b>SVM 학습이란?</b></font> w와 b를 구하는 과정이고, 라그랑제 승수 α를 구하면 됨)\n",
+    " <br> (※ <span style=\"color:red\"><b>SVM 학습이란?</b></span> w와 b를 구하는 과정이고, 라그랑제 승수 α를 구하면 됨)\n",
     " \n",
     "#### 초평면의 SVM을 유도하는데 도움이 되는 몇 가지 수학적 특성\n",
     " 1. d(x)는 전체 특징 공간을 두 영역으로 분할하며, 한 쪽 영역에 속하는 점 x는 d(x)>0이고 다른 쪽에 있는 점은 d(x)<0 이다\n",
