--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"#6AFB92\"><b>1. 선형 분리 가능한 상황</b></font>"
+    "###  <span style=\"color:#6AFB92\"><b>1. 선형 분리 가능한 상황</b></span>"
    ]
   },
   {
@@ -102,13 +102,13 @@
     " - b를 변화시키면 그에 따라 직선의 위치가 변함\n",
     " - '두 부류에 대해 직선으로부터 가장 가까운 샘플까지의 거리가 같게 되는' b를 결정\n",
     " <br> (그림에서 두 개의 결정 직선 ①과 ②는 이렇게 얻은 것)\n",
-    " - <font color=\"Blue\"><b>여백(마진)<sup>margin</sup></b></font>은 직선으로부터 가장 가까운 샘플까지 거리의 두 배로 정의함\n",
-    " - 가장 가까운 샘플을 <font color=\"Blue\"><b>서포트 벡터</b></font>라 부름\n",
+    " - <span style=\"color:Blue\"><b>여백(마진)<sup>margin</sup></b></span>은 직선으로부터 가장 가까운 샘플까지 거리의 두 배로 정의함\n",
+    " - 가장 가까운 샘플을 <span style=\"color:Blue\"><b>서포트 벡터</b></span>라 부름\n",
     "<img src=\"4.jpg\">\n",
     "<br><br>\n",
     "* <b> 여백을 가장 크게 하는 결정 초평면의 방향, 즉 w를 찾는 것이 중요함~!! </b>\n",
     " - 최적을 찾기 위해서는 수학에 기대는 수밖에 없음~!!\n",
-    "* 속이 찬 샘플은 직선으로부터 가장 가까운 것들로서 여백의 크기를 좌우하는 중요한 역할을 함 (<font color=\"Blue\"><b>서포트 벡터<sup>support vector</sup></b></font>)\n",
+    "* 속이 찬 샘플은 직선으로부터 가장 가까운 것들로서 여백의 크기를 좌우하는 중요한 역할을 함 (<span style=\"color:Blue\"><b>서포트 벡터<sup>support vector</sup></b></span>)\n",
     "* 여백의 공식화\n",
     "<img src=\"5.jpg\">\n",
     "* <b>조건부 최적화 문제<sup>constrained optimization problem</sup></b>\n",
@@ -123,7 +123,7 @@
     "\n",
     "<br>\n",
     "+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++\n",
-    "<font color=\"Red\"><b> 최대 여백을 확보함으로써 일반화 능력을 극대화하겠다는 SVM의 철학을 수학식으로 표현한 것</b></font>\n",
+    "<span style=\"color:Red\"><b> 최대 여백을 확보함으로써 일반화 능력을 극대화하겠다는 SVM의 철학을 수학식으로 표현한 것</b></span>\n",
     "+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++"
    ]
   },
@@ -138,7 +138,7 @@
     "* 문제의 난이도\n",
     " - N개의 선형 부등식을 조건으로 2차 함수의 최적화 문제\n",
     "\n",
-    "#### 수학에서 이런 종류의 조건부 최적화 문제는 <font color=\"Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></font>를 도입하여 해결</b>\n",
+    "#### 수학에서 이런 종류의 조건부 최적화 문제는 <span style=\"color:Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></span>를 도입하여 해결</b>\n",
     "* <font color=\"Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></b></font>\n",
     " - 제약이 있는 최적화 문제에서 원 문제(primal problem)를 풀기 쉬운 문제(dual problem)로 변환하는 기법 \n",
     " - 어떤 함수가 주어진 제약식을 만족시키면서 그 함수가 갖는 최대값 혹은 최소값을 찾고자 할 때 사용\n",
