--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -139,22 +139,22 @@
     " - N개의 선형 부등식을 조건으로 2차 함수의 최적화 문제\n",
     "\n",
     "#### 수학에서 이런 종류의 조건부 최적화 문제는 <span style=\"color:Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></span>를 도입하여 해결</b>\n",
-    "* <font color=\"Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></b></font>\n",
+    "* <span style=\"color:Blue\"><b>라그랑제 승수<sup>Lagrange multiplier</sup></b></span>\n",
     " - 제약이 있는 최적화 문제에서 원 문제(primal problem)를 풀기 쉬운 문제(dual problem)로 변환하는 기법 \n",
     " - 어떤 함수가 주어진 제약식을 만족시키면서 그 함수가 갖는 최대값 혹은 최소값을 찾고자 할 때 사용\n",
     " - <b> 핵심) 두 가지 조건을 동시에 만족시키고 공통접선을 찾는 것 </b>\n",
     "\n",
-    "#### 라그랑제 함수로 표현한 조건부 최적화 문제는 보통 <font color=\"Blue\"><b>Karush-Kuhn-Tucker(KKT) 조건</b></font>을 이용하여 품\n",
+    "#### 라그랑제 함수로 표현한 조건부 최적화 문제는 보통 <span style=\"color:Blue\"><b>Karush-Kuhn-Tucker(KKT) 조건</b></span>을 이용하여 품\n",
     "* KKT 조건\n",
     "<img src=\"8.jpg\">\n",
     " - 4번째 식에 의하면, 모든 샘플이 α<sub>i</sub>=0 또는 t<sub>i</sub>(w<sup>T</sup>x<sub>i</sub>+b)-1=0 이어야 함\n",
-    " <br> α<sub>i</sub>≠0인 샘플이 <font color=\"Blue\"><b>서포트 벡터</b></font>임\n",
+    " <br> α<sub>i</sub>≠0인 샘플이 <span style=\"color:Blue\"><b>서포트 벡터</b></span>임\n",
     " - 1번째 식에 의하면, 라그랑제 승수 α<sub>i</sub> 알면 w 구할 수 있음 \n",
     " <br> (이제부터 'w를 구하는 대신 라그랑제 승수를 구하는' 문제로 관심 전환)\n",
     " - 4번째 식에 의하여 b를 구할 수 있음\n",
     "\n",
     "#### 문제의 볼록 성질을 이용하여 풀기 쉬운 형태로 변환\n",
-    "* 볼록 성질을 만족하는 조건부 최적화 문제는 <font color=\"Blue\"><b>Wolfe 듀얼<sup>dual</sup></b></font> 문제로 변형할 수 있음\n",
+    "* 볼록 성질을 만족하는 조건부 최적화 문제는 <span style=\"color:Blue\"><b>Wolfe 듀얼<sup>dual</sup></b></span> 문제로 변형할 수 있음\n",
     "<img src=\"10.jpg\">\n",
     "<br>\n",
     "* 위의 조건부 최적화 문제를 Wolfe 듀얼로 바꾸어 쓰면,\n",
@@ -163,7 +163,7 @@
     "\n",
     "<br>\n",
     "++++++++\n",
-    "#### <font color=\"Red\"><b>최종적으로,</b></font>  간단한 수식 정리를 하면\n",
+    "#### <span style=\"color:Red\"><b>최종적으로,</b></span>  간단한 수식 정리를 하면\n",
     "++++++++\n",
     "<img src=\"12.jpg\">\n",
     "* 흥미로운 특성들\n",
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"Red\"><b>■ 조건부 최적화 문제의 변형 과정</b></font>\n",
+    "### <span style=\"color:Red\"><b>■ 조건부 최적화 문제의 변형 과정</b></span>\n",
     "<img src=\"9.jpg\">"
    ]
   },
@@ -218,17 +218,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*  <font color=\"Blue\"><b>지지 벡터 머신</b></font>\n",
-    "* <font color=\"Blue\"><b>선형 분리(linearly separable)</b></font>\n",
+    "*  <span style=\"color:Blue\"><b>지지 벡터 머신</b></span>\n",
+    "* <span style=\"color:Blue\"><b>선형 분리(linearly separable)</b></span>\n",
     " - 하나의 직선을 그려 선의 한쪽에는 한 가지 분류 항목만을 가지는 데이터 점들이 오도록 하고, 선의 다른 한쪽에는 다른 분류 항목을 가진 데이터 점들이 오게 함으로써 데이터 점들을 분리하는 것\n",
-    "* <font color=\"Blue\"><b>초평면 분리(separating hyperplane)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>초평면 분리(separating hyperplane)</b></span>\n",
     " - 선 : 데이터 집합을 분리하는데 사용하는 것\n",
     " - 초평면 (hyperplane) : N-1차원 (의사 결정 범위)\n",
     " - (의사 결정 범위 : 하나의 측면에 있는 모든 것은 하나의 분류 항목에 속하며, 또 다른 측면에 있는 모든 것은 다른 분류 항목에 속하게 됨)\n",
     "* N-1차원 - 초평면 ~> 의사 결정 범위(decision boundary)\n",
-    "* <font color=\"Blue\"><b>마진(margin)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>마진(margin)</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점을 찾기를 원하면서, 이 지점이 가능한 한 분리선에서 멀리 떨어져 있기를 원하는 것 (※ 마진이 가능한 한 큰게 좋음)\n",
-    "* <font color=\"Blue\"><b>지지 벡터</b></font>\n",
+    "* <span style=\"color:Blue\"><b>지지 벡터</b></span>\n",
     " - 초평면 분리에 가장 가까운 지점 (※ 분리선에서 지지 벡터까지의 거리를 가장 크게 해야하며, 이 문제를 최적화하는 방법을 찾아야 함)\n",
     " \n",
     "* 여백(margin)이라는 개념을 어떻게 공식화 할 것인가? \n",
@@ -277,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color=\"Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></font>"
+    "### <span style=\"color:Red\"><b> 6.2.1 분류기 관점에서 최적화 문제 구성하기 </b></span>"
    ]
   },
   {
@@ -298,7 +298,7 @@
     " - 우리는 가장 좋은 값을 찾아야만 하며, 이 값들은 몇 가지 제약 조건을 충족해야만 함\n",
     " - 제약 조건은, <b>label*(w<sup>T</sup>x+b)</b>이 1.0 또는 이보다 더 큰 값이 되어야 한다는 것\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>라그랑지 곱수 (Lagrange multipliers)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>라그랑지 곱수 (Lagrange multipliers)</b></span>\n",
     " - 제약식을 목적함수에 추가하기 위하여 0이 아닌 양의 새로운 변수를 추가하여 Lagrange 포맷으로 변화하는 것\n",
     " - 제약이 있는 최적화 문제를 푸는 방법\n",
     " - 어떤 함수가 주어진 제약식을 만족시키면서 그 함수가 갖는 최대값 혹은 최소값을 찾고자 할 때 사용\n",
@@ -310,7 +310,7 @@
     "* 최적화 함수의 표현\n",
     "<img src=\"수식 4.jpg\">\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>여유 변수(slack variable)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b> SMO (Sequential Minimal Optimization)</b></font>\n",
+    "* <span style=\"color:Blue\"><b> SMO (Sequential Minimal Optimization)</b></span>\n",
     " - 순차적 최소 최적화\n",
     " - 커다란 최적화 문제를 가짐\n",
     " - 이 문제는 다시 작은 문제들로 나누어짐\n",
@@ -538,8 +538,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <font color=\"Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
-    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </font> "
+    " <span style=\"color:Red\">※ 분류 항목 표시가 0과 1이 아닌 -1과 1인 것을 확인할 수 있는데,\n",
+    "  <br>  -1과 1은 단지 부호만 다르기 때문에 계산을 관리할 수 있음 </span> "
    ]
   },
   {
@@ -2767,8 +2767,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Orange\"><b>간략한 형태의 SMO</b></font>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
-    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <font color=\"Blue\"><b>전체 플랫 SMO 알고리즘</b></font>으로 변경하여 사용\n",
+    "* <span style=\"color:Orange\"><b>간략한 형태의 SMO</b></span>는 적은 데이터 집합에서는 잘 동작하지만, 많은 데이터 집합에서는 속도가 떨어짐\n",
+    "* 본 장에서는, 간략한 형태의 알고리즘을 이용하여 <span style=\"color:Blue\"><b>전체 플랫 SMO 알고리즘</b></span>으로 변경하여 사용\n",
     "<br><br>\n",
     "* 최적화 부분에서 알파를 변경하되 나머지는 이전에 사용된 상태를 그대로 유지함\n",
     "* 단지 다른 것은 최적화에서 사용할 알파를 선택하는 방법\n",
