--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -2774,7 +2774,7 @@
     "* 단지 다른 것은 최적화에서 사용할 알파를 선택하는 방법\n",
     "* 전체 플랫은 몇 가지 경험적인(heuristic) 방법을 사용하여 속도를 개선\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>플랫 SMO 알고리즘</b></font> <br> \n",
+    "* <span style=\"color:Blue\"><b>플랫 SMO 알고리즘</b></span> <br> \n",
     " <b>1. 첫 번째 알파를 선택하기 위해서 외부 반복문 수행</b>\n",
     " <br> 외부 반복문은 전체 데이터 집합에서 하나, 범위가 없는 알파에서 하나씩 이들 사이를 번갈아 가며 수행\n",
     " <br> (※ 범위가 없는 알파는 범위가 0 또는 한정되지 않는 알파를 말함)<br>\n",
