--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -2781,7 +2781,7 @@
     " <b>2. 두 번째 알파는 첫 번째 알파가 선택된 다음 내부 반복문을 사용하여 선택</b> \n",
     " <br> 이 알파는 최적화 하는 동안 단계 크기를 가장 크게 하는 방법으로 선택됨\n",
     " <br> 오류 값에 대한 전역 캐시(global cache)를 생성하며, 단계 크기 또는 Ei-Ej를 가장 크게 하는 알파 선택\n",
-    " <br> (※ <font color=\"Orange\"><b>간략한 형태의 SMO</b></font> 에서는 j를 선택한 후 오류 Ej를 계산했었음) "
+    " <br> (※ <<span style=\"color:Orange\">b>간략한 형태의 SMO</b></span> 에서는 j를 선택한 후 오류 Ej를 계산했었음) "
    ]
   },
   {
@@ -3238,12 +3238,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b>커널(Kernel)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>커널(Kernel)</b></span>\n",
     " - 선형 데이터를 위해 사용했던 방법 중에서 이 그림의 패턴을 포착하기 위한 성능 좋은 도구 사용할 방법\n",
     " - 데이터를 분류기가 이해하기 쉬운 형태로 변환하기 위해 커널이라는 것을 사용\n",
     "<br><br>\n",
     "* 이번 절에서는 커널과 지지 벡터 머신을 사용하는 방법을 설명\n",
-    "* 이후, 커널 중 <font color=\"Blue\"><b>반지름 성향(radial bias) 함수</b></font> 설명\n",
+    "* 이후, 커널 중 <span style=\"color:Blue\"><b>반지름 성향(radial bias) 함수</b></span> 설명\n",
     "* 이 함수를 기존 분류기에 적용"
    ]
   },
@@ -3262,14 +3262,14 @@
     "* <b> \"하나의 속성 공간에서 다른 속성 공간으로 매핑(mapping)한다\" </b>\n",
     " - 일반적으로, 이러한 매핑은 저차원의 속성 공간에서 고차원 공간으로 이동시킬 때 사용}\n",
     "<br><br>\n",
-    "* <font color=\"Blue\"><b>커널(Kernel)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>커널(Kernel)</b></span>\n",
     " - 하나의 속성 공간에서 다른 속성 공간으로 매핑하는 것\n",
     " - 어려운 형태의 데이터를 쉬운 형태로 변환하는 포장지나 인터페이스처럼 생각해도 됨\n",
     "* SVM 최적화에 대한 장점\n",
     " - 모든 연산이 내적 측면에서 다루어질 수 있다는 것\n",
     " <br> (※ 내적은 스칼라 또는 단일 수를 산출하기 위해 두 개의 벡터를 함께 곱하는 것)\n",
     " - 간소화하지 않은 커널 함수를 가지고 내적을 대신할 수 있음\n",
-    "* <font color=\"Blue\"><b>커널 트릭(kernel trick)</b></font> 또는 <font color=\"Blue\">><b>커널 서브스테이션(kernel substation)</b></font>\n",
+    "* <span style=\"color:Blue\"><b>커널 트릭(kernel trick)</b></span> 또는 <span style=\"color:Blue\"><b>커널 서브스테이션(kernel substation)</b></span>\n",
     " - 커널을 가지고 내적을 대신하는 것"
    ]
   },
