--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -3293,7 +3293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b> 반지름 성향 함수(Radial Bias Function) </b></font>\n",
+    "* <span style=\"color:Blue\"><b> 반지름 성향 함수(Radial Bias Function) </b></span>\n",
     " - 커널이며, 종종 지지 벡터 머신과 함께 사용됨\n",
     " - 하나의 벡터를 가지고 벡터 간의 거리를 기반으로 하는 하나의 스칼라를 출력하는 함수\n",
     " - 가우스(Gaussian) 확률 분포 사용\n",
@@ -3301,10 +3301,10 @@
     "<img src=\"gaussian.jpg\">\n",
     " σ는 사용자 정의(user-define) 매개변수, \"거리 범위(reach)\" 또는 얼마나 빨리 0으로 떨어지는지를 결정\n",
     "<br>\n",
-    "* <font color=\"Blue\"><b> 가우스 확률 분포 </b></font>\n",
+    "* <span style=\"color:Blue\"><b> 가우스 확률 분포 </b></span>\n",
     " - 데이터의 속성 공간에서 높은 속성 공간으로 매핑\n",
     " - 이 커널을 가지고 좋은 결과를 얻을 수 있음\n",
-    " <br> (<font color=\"Purple\"><b>***kernelTrans()*** </b></font> 用)"
+    " <br> (<span style=\"color:Purple\"><b>***kernelTrans()*** </b></span> 用)"
    ]
   },
   {
@@ -5404,7 +5404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b>지지 벡터 머신</b></font>은 분류기의 한 유형\n",
+    "* <span style=\"color:Blue\"><b>지지 벡터 머신</b></span>은 분류기의 한 유형\n",
     "* 머신이라고 불리는 이유는, 이진수로 의사 결정을 생성하는 의사결정 머신이기 때문\n",
     "* 지지 벡터들은 학습하고자 하는 것에 대해 작은 일반화 오류를 가지도록 학습\n",
     "* 이러한 장점 때문에 지지 벡터 머신은 인기가 있으며, 비지도 학습에서 가장 좋은 알고리즘 중 하나로 간주\n",
@@ -5427,7 +5427,7 @@
    "source": [
     "## Reference \n",
     "\n",
-    "* <font color=\"Sky Blue\"><b> Machine Learning in Action pdf(Eng Ver)</b></font>\n",
+    "* <span style=\"color:#1589FF\"><b> Machine Learning in Action pdf(Eng Ver)</b></span>\n",
     "<br> http://www2.ift.ulaval.ca/~chaib/IFT-4102-7025/public_html/Fichiers/Machine_Learning_in_Action.pdf"
    ]
   },
