--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -64,7 +64,7 @@
     " - ②는 발생하는 패턴에서 약간의 변형이 발생하면 결정 직선을 넘어 오분류될 가능성이 큼\n",
     " - 하지만, 직선 ③은 두 부류 모두에 대해 여백<sup>margin</sup>이 커서 웬만한 변형은 오분류로 이어지지 않음\n",
     " - 따라서, ②에 비해 ③이 일반화 능력이 뛰어나고 결국 분류기 품질 면에서 더 좋다고 할 수 있음~!! \n",
-    "<img src=\"../../src/Ch06_SVM/Img/classifier.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/classifier.jpg\">"
    ]
   },
   {
@@ -84,7 +84,7 @@
     " 2. 하나의 초평면을 표현하는 식은 여럿 있다. 위 식에 0이 아닌 임의의 상수 c를 곱하여도 같은 초평면을 나타낸다\n",
     " 3. w는 초평면의 법선 벡터로서 <sup>normal vector</sup> 초평면의 방향을 나타내고, b는 위치를 나타낸다\n",
     " 4. 임의의 점 x에서 초평면까지의 거리는 다음과 같음\n",
-    "<img src=\"../../src/Ch06_SVM/Img/2.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/2.jpg\">"
    ]
   },
   {
