--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -186,7 +186,7 @@
    "metadata": {},
    "source": [
     "#### ■ [예제 5.2] 두 개의 샘플을 갖는 경우에 대한 문제의 풀이\n",
-    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.2.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.2.jpg\">"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "metadata": {},
    "source": [
     "#### ■ [예제 5.3] 세 개의 샘플을 갖는 경우에 대한 문제의 풀이\n",
-    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.3.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/ex. 5.3.jpg\">"
    ]
   },
   {
