--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -291,7 +291,7 @@
     " - 분리선을 위치시키기 위하여 분류기를 수행하고 결정할 때 마진은 다음 식에 의해 계산됨 \n",
     " - 목표 : 현재 w와 b의 값을 찾고 분류기를 정의하는 것\n",
     " <br>\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 2.jpg\"> \n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 2.JPG\"> \n",
     " - 이 문제를 직접적으로 해결하는 것은 매우 어렵기 때문에, 더 쉽게 해결할 수 있는 다른 형태로 변환\n",
     "* <b>한 부분을 고정시켜 놓고 다른 부분을 극대화시킴</b>\n",
     " - <b>label*(w<sup>T</sup>x+b)</b>를 지지 벡터를 위해 1이 되도록 설정한다면 ||w||<sup>-1</sup>을 극대화하여 문제를 해결할 수 있음\n",
@@ -308,13 +308,13 @@
     " - <b>핵심) 두 가지 조건을 동시에 만족시키는 공통접선을 찾는 것</b>\n",
     "<br><br>\n",
     "* 최적화 함수의 표현\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 4.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 4.JPG\">\n",
     "<br><br>\n",
     "* <span style=\"color:Blue\"><b>여유 변수(slack variable)</b></span>\n",
     " - 위의 수식을 통해 데이터가 100% 선형 분리된다는 가정을 만듦\n",
     " - 하지만, 데이터가 결코 깨끗하지 않음\n",
     " - 여유 변수라고 하는 것을 도입함으로써 의사 결정 범위에 속하지 않는 예제를 허용할 수 있음\n",
-    "<img src=\"../../src/Ch06_SVM/Img/수식 5.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/수식 5.JPG\">\n",
     " - 상수 c는 마진을 크게 만들고자 하는 우리의 목표와 대부분의 예제가 기능적인 1.0 이상의 마진을 갖도록 보장하는 것 사이에서 가중치를 조절\n",
     " - 상수 c는 최적화 코드의 인자이므로 변경할 수 있으며, 그에 따라 다른 결과를 얻을 수 있음\n",
     " - 먼저, 알파를 해결하면 알파의 관점에서 분리 초평면을 표현할 수 있음\n",
