--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -402,7 +402,7 @@
     "* 그런 다음, 남아 있는 알파들에서 임의로 두 번째 알파 선택\n",
     "<br> (※ 여기서 주의해야 할 점은 두 알파를 동시에 변경해야 한다는 것)\n",
     " - 다음과 같은 제약 조건이 있기 때문\n",
-    "<img src=\"../../src/Ch06_SVM/Img/제약조건.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/제약조건.JPG\">\n",
     "* 알파 하나만을 변경하는 것은 제약 조건을 위반하는 것이므로 <b>항상 알파 두 개를 한꺼번에 변경</b>\n",
     " - 이를 수행하기 위해 <b>도움 함수</b>를 생성\n",
     " - 이 함수는 범위 내에서 임의로 하나의 정수를 선택\n",
