--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -5388,7 +5388,7 @@
    "source": [
     "** 표 6.1 필기체 숫자에 커널 설정을 달리한 성능 비교 **\n",
     "\n",
-    "<img src=\"../../src/Ch06_SVM/Img/Table 6.1.jpg\">"
+    "<img src=\"../../src/Ch06_SVM/Img/Table 6.1.JPG\">"
    ]
   },
   {
