--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -200,11 +200,71 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+     "###  <span style=\"color:#6AFB00\"><b>2. 선형 분리 불가능한 상황</b></span>"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "* 샘플 (x,t)의 세 가지 상황\n",
+    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.6.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 슬랙 변수 ξ를 도입하여 하나의 식으로 쓰면,\n",
+    "<img src=\"../doc/Ch06_SVM/Img/5.2.2_table.5.2.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.7.jpg\">\n",
+    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.8.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.9.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.10.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  <span style=\"color:#1589FF\"><b>비선형 SVM</b></span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
