--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -209,7 +209,7 @@
    "metadata": {},
    "source": [
     "* 샘플 (x,t)의 세 가지 상황\n",
-    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.6.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_fig.5.6.jpg\">"
    ]
   },
   {
@@ -217,29 +217,29 @@
    "metadata": {},
    "source": [
     "* 슬랙 변수 ξ를 도입하여 하나의 식으로 쓰면,\n",
-    "<img src=\"../doc/Ch06_SVM/Img/5.2.2_table.5.2.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_table.5.2.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.7.JPG\">\n",
-    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.8.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_fig.5.7.jpg\">\n",
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_fig.5.8.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.9.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_fig.5.9.jpg\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../src/Ch06_SVM/Img/5.2.2_fig.5.10.JPG\">"
+    "<img src=\"../../src/Ch06_SVM/Img/5.2.2_fig.5.10.jpg\">"
    ]
   },
   {
