--- a/doc/Ch06_SVM/SVM_v3.ipynb
+++ b/doc/Ch06_SVM/SVM_v3.ipynb
@@ -60,7 +60,7 @@
     " - (why?)> 오류 함수가 0의 값을 갖게 되므로 추가로 ③과 같은 분류기를 찾아갈 이유가 없기 때문\n",
     " - 훈련 입장에서 보면 ②와 ③은 둘 다 오류가 0이므로 같은 성능의 분류기\n",
     "* 하지만, 분류기를 만드는 목적은 미래에 발생할 미지의 패턴을 분류하기 위함에 있음\n",
-    " - 즉, 미지의 패턴을 얼마나 잘 분류하느냐를 따지는 척도인 일반화<sup>generalization</sup> 능력 측면에서 보면②와 ③은 갖지 않음\n",
+    " - 즉, 미지의 패턴을 얼마나 잘 분류하느냐를 따지는 척도인 <span style=\"color:Blue\"><b>일반화<sup>generalization</sup></b></span> 능력 측면에서 보면②와 ③은 갖지 않음\n",
     " - ②는 발생하는 패턴에서 약간의 변형이 발생하면 결정 직선을 넘어 오분류될 가능성이 큼\n",
     " - 하지만, 직선 ③은 두 부류 모두에 대해 여백<sup>margin</sup>이 커서 웬만한 변형은 오분류로 이어지지 않음\n",
     " - 따라서, ②에 비해 ③이 일반화 능력이 뛰어나고 결국 분류기 품질 면에서 더 좋다고 할 수 있음~!! \n",
