--- a/doc/Ch07_AdaBoost/Adaboost.ipynb
+++ b/doc/Ch07_AdaBoost/Adaboost.ipynb
@@ -28,7 +28,7 @@
     "## 7.2 훈련: 오류에 초점을 맞춘 분류기 개선\n",
     "\n",
     "## 7.3 의사결정 스텀프로 약한 학습기 생성하기\n",
-    "#### <font color=\"Blue\"><b>리스팅 7.1 의사결정 스텀프 생성 함수</b></font>\n",
+    "#### <span style=\"Blue\"><b>리스팅 7.1 의사결정 스텀프 생성 함수</b></span>\n",
     "\n",
     "## 7.4 전체 에이다부스트 알고리즘 구현하기\n",
     "#### <font color=\"Blue\"><b>리스팅 7.2 의사결정 스텀프로 에이다부스트 검사</b></font>\n",
