--- a/doc/Ch07_AdaBoost/Adaboost.ipynb
+++ b/doc/Ch07_AdaBoost/Adaboost.ipynb
@@ -28,20 +28,20 @@
     "## 7.2 훈련: 오류에 초점을 맞춘 분류기 개선\n",
     "\n",
     "## 7.3 의사결정 스텀프로 약한 학습기 생성하기\n",
-    "#### <span style=\"Blue\"><b>리스팅 7.1 의사결정 스텀프 생성 함수</b></span>\n",
+    "#### <span style=\"color:Blue\"><b>리스팅 7.1 의사결정 스텀프 생성 함수</b></span>\n",
     "\n",
     "## 7.4 전체 에이다부스트 알고리즘 구현하기\n",
-    "#### <font color=\"Blue\"><b>리스팅 7.2 의사결정 스텀프로 에이다부스트 검사</b></font>\n",
+    "#### <span style=\"color:Blue\"><b>리스팅 7.2 의사결정 스텀프로 에이다부스트 검사</b></span>\n",
     "\n",
     "## 7.5 검사: 에이다부스트로 분류하기\n",
-    "#### <font color=\"Blue\"><b>리스팅 7.3 에이다부스트 분류 함수</b></font>\n",
+    "#### <span style=\"color:Blue\"><b>리스팅 7.3 에이다부스트 분류 함수</b></span>\n",
     "\n",
     "## 7.6 예제: 에이다부스트에 복잡한 데이터 집합 적용하기\n",
-    "#### <font color=\"Blue\"><b>리스팅 7.4 에이다부스트를 위해 데이터를 불러오는 함수</b></font>\n",
+    "#### <span style=\"color:Blue\"><b>리스팅 7.4 에이다부스트를 위해 데이터를 불러오는 함수</b></span>\n",
     "\n",
     "## 7.7 분류 불균형\n",
     "### 7.7.1 또 다른 성능 측정 방법: 정확도, 재현율 그리고 ROC\n",
-    "#### <font color=\"Blue\"><b>리스팅 7.5 ROC 플롯과 AUC 계산 함수</b></font>\n",
+    "#### <span style=\"color:Blue\"><b>리스팅 7.5 ROC 플롯과 AUC 계산 함수</b></span>\n",
     "### 7.7.2 비용 함수를 가진 분류기의 의사결정 다루기\n",
     "### 7.7.3 분류 불균형이 있는 데이터를 처리하기 위한 데이터 샘플링\n",
     "## 7.8 요약"
@@ -1600,7 +1600,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* <font color=\"Blue\"><b>앙상블 메소드</b></font>는 간단하게 하나의 분류기를 사용하는 것보다 더 좋은 답을 구하기 위해서 다양한 분류기들의 예측을 결합하는 방법\n",
+    "* <span style=\"color:Blue\"><b>앙상블 메소드</b></span>는 간단하게 하나의 분류기를 사용하는 것보다 더 좋은 답을 구하기 위해서 다양한 분류기들의 예측을 결합하는 방법\n",
     " - 다양한 분류기를 결합하는 것은 과적합과 같은 단일 분류기의 단점을 공략하는 방법\n",
     " - 분류기들이 서로 큰 차이를 보일 때, 다양한 분류기들을 결합하는 것은 효과적임\n",
     "* 앙상블 메소드의 두 가지 유형 - 배깅 & 부스팅\n",
