--- a/doc/Ch07_AdaBoost/Adaboost.ipynb
+++ b/doc/Ch07_AdaBoost/Adaboost.ipynb
@@ -1606,7 +1606,7 @@
     "* 앙상블 메소드의 두 가지 유형 - 배깅 & 부스팅\n",
     " - 배깅: 대체할 데이터 집합을 위해 원본 데이터 집합과 같은 크기의 데이터 집합을 임의로 추출한 예제들로 구축\n",
     " - 부스팅: 하나의 데이터 집합에 순차적으로 서로 다른 여러 가지 분류기를 적용함으로써 단계를 추가하는 배깅의 발상 적용\n",
-    "* <font color=\"Blue\"><b>에이다부스트</b></font>는 약한 학습기를 사용\n",
+    "* <span style=\"color:Blue\"><b>에이다부스트</b></span>는 약한 학습기를 사용\n",
     " - 약한 학습기는 가중치 벡터에 의해 가중치가 부여된 입력 데이터를 분류함\n",
     " - 첫 번째 반복에서는 모든 데이터에 같은 가중치가 부여되지만, 그 다음 반복부터는 이전에 부정확하게 분류된 데이터에 대해 더 높은 가중치가 부여됨\n",
     " - 이처럼 오류에 적응하는 것이 에이다부스트의 장점\n",
