--- a/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
+++ b/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "source": [
     "### 6.1.2 확률적 경사 하강법(SGD) \n",
-    "<img src=\"1.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/1.jpg\">\n",
     "* w : 갱신할 가중치 매개변수\n",
     "* ∂L/∂W : W에 대한 손실 함수의 기울기\n",
     "* n : 학습률\n",
