--- a/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
+++ b/doc/DeepLearning_from_Scratch/Chapter.6.ipynb
@@ -214,7 +214,7 @@
     " - '운동량' 뜻하는 단어\n",
     " - 물리 속성과 관련이 있음\n",
     "\n",
-    "<img src=\"6.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/6.jpg\">\n",
     "\n",
     "(SGD와 유사)\n",
     "* W : 갱신할 가중치 매개변수\n",
@@ -232,7 +232,7 @@
     " - 모멘텀은 공이 그릇의 바닥을 구르는 듯한 움직임을 보임\n",
     "\n",
     " \n",
-    "<img src=\"7.jpg\">"
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/7.jpg\">"
    ]
   },
   {
@@ -282,7 +282,7 @@
     " - y축의 힘은 크지만 위아래로 번갈아 받아서 상충하여 y축 방향의 속도는 안정적이지 않음\n",
     " - 전체적으로는 SGD보다 x축 방향으로 빠르게 다가갈 수 있어서 지그재그 움직임을 줄일 수 있음\n",
     "\n",
-    "<img src=\"8.jpg\">"
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/8.jpg\">"
    ]
   },
   {
@@ -308,7 +308,7 @@
     " \n",
     "<br>\n",
     "\n",
-    "<img src=\"9.jpg\">\n",
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/9.jpg\">\n",
     "\n",
     "\n",
     "* AdaGrad의 갱신 방법 (수식적으로 표현)\n",
@@ -365,7 +365,7 @@
     "* [그림 6-6]을 보면, 최솟값을 향해 효율적으로 움직이는 것을 알 수 있음\n",
     " - y축 방향은 기울기가 커서 처음에는 크게 움직이지만, 그 큰 움직임에 비례해 갱신 정도도 큰 폭으로 작아지도록 조정됨\n",
     " - 따라서, y축 방향으로 갱신 강도가 약해졌고, 지그재그 움직임이 줄어듦\n",
-    "<img src=\"10.jpg\">"
+    "<img src=\"../../src/DeepLearning_from_Scratch/Img/10.jpg\">"
    ]
   },
   {
